:bug: Fix Input clear icon align problem
close #18150
close #17414

--- a/components/input/style/index.less
+++ b/components/input/style/index.less
@@ -44,7 +44,7 @@
 .@{ant-prefix}-input-clear-icon {
   color: @disabled-color;
   font-size: @font-size-sm;
-  vertical-align: top;
+  vertical-align: 0;
   cursor: pointer;
   transition: color 0.3s;
 
